package command;

public enum CommandPermissionLevel {
    Staff,Self,Borrower
}
