package object;

public enum Permission {
    Borrower,Staff
}
